docusaurus/versioned_docs/version-0.6.0/013_ProducerDecorator.md

<!-- WARNING: THIS FILE WAS AUTOGENERATED! DO NOT EDIT! -->

``` python
import asyncio
from contextlib import asynccontextmanager
import unittest
from unittest.mock import Mock, call, ANY
from itertools import product

from pydantic import Field

from fastkafka._testing.apache_kafka_broker import ApacheKafkaBroker
from fastkafka._testing.test_utils import mock_AIOKafkaProducer_send
from fastkafka.encoder import avro_encoder, json_encoder
```

------------------------------------------------------------------------

### KafkaEvent

>      KafkaEvent (message:~BaseSubmodel, key:Optional[bytes]=None)

A generic class for representing Kafka events. Based on BaseSubmodel,
bound to pydantic.BaseModel

Attributes: message (BaseSubmodel): The message contained in the Kafka
event, can be of type pydantic.BaseModel. key (bytes, optional): The
optional key used to identify the Kafka event.

``` python
event = KafkaEvent("Some message")
assert event.message == "Some message"
assert event.key == None

event = KafkaEvent("Some message", b"123")
assert event.message == "Some message"
assert event.key == b"123"
```

``` python
# # | export


# def _to_json_utf8(o: Any) -> bytes:
#     """Converts to JSON and then encodes with UTF-8"""
#     if hasattr(o, "json"):
#         return o.json().encode("utf-8")  # type: ignore
#     else:
#         return json.dumps(o).encode("utf-8")
```

``` python
# assert _to_json_utf8({"a": 1, "b": [2, 3]}) == b'{"a": 1, "b": [2, 3]}'


class A(BaseModel):
    name: str = Field()
    age: int


# assert _to_json_utf8(A(name="Davor", age=12)) == b'{"name": "Davor", "age": 12}'
```

``` python
message = A(name="Davor", age=12)
wrapped = _wrap_in_event(message)

assert type(wrapped) == KafkaEvent
assert wrapped.message == message
assert wrapped.key == None
```

``` python
message = KafkaEvent(A(name="Davor", age=12), b"123")
wrapped = _wrap_in_event(message)

assert type(wrapped) == KafkaEvent
assert wrapped.message == message.message
assert wrapped.key == b"123"
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/producer_decorator.py#L60"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### get_loop

>      get_loop ()

``` python
loop = get_loop()

assert isinstance(loop, asyncio.AbstractEventLoop)
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/producer_decorator.py#L72"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### release_callback

>      release_callback (fut:_asyncio.Future)

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/producer_decorator.py#L76"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### produce_single

>      produce_single (producer:aiokafka.producer.producer.AIOKafkaProducer,
>                      topic:str,
>                      encoder_fn:Callable[[pydantic.main.BaseModel],bytes], wra
>                      pped_val:fastkafka.KafkaEvent[pydantic.main.BaseModel])

``` python
with ApacheKafkaBroker(topics=["test_topic"], apply_nest_asyncio=True) as broker:
    producer = AIOKafkaProducer(bootstrap_servers=broker)
    await producer.start()

    await produce_single(
        producer,
        topic="test_topic",
        encoder_fn=json_encoder,
        wrapped_val=KafkaEvent(message=A(name="Davor", age=12), key=b"test"),
    )
    
    await producer.stop()
```

    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): entering...
    [WARNING] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): (<_UnixSelectorEventLoop running=True closed=False debug=False>) is already running!
    [WARNING] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): calling nest_asyncio.apply()
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: But not exported to PATH, exporting...
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._components.test_dependencies: But not exported to PATH, exporting...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._testing.apache_kafka_broker: <class 'fastkafka.testing.ApacheKafkaBroker'>.start(): returning 127.0.0.1:9092
    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): exited.
    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.stop(): entering...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 299567...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 299567 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 299207...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 299207 terminated.
    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.stop(): exited.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/producer_decorator.py#L99"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### produce_batch

>      produce_batch (producer:aiokafka.producer.producer.AIOKafkaProducer,
>                     topic:str,
>                     encoder_fn:Callable[[pydantic.main.BaseModel],bytes], wrap
>                     ped_val:fastkafka.KafkaEvent[typing.List[pydantic.main.Bas
>                     eModel]])

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/producer_decorator.py#L88"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### send_batch

>      send_batch (producer:aiokafka.producer.producer.AIOKafkaProducer,
>                  topic:str,
>                  batch:aiokafka.producer.message_accumulator.BatchBuilder,
>                  key:Optional[bytes])

``` python
msgs = [A(name="Davor", age=12) for _ in range(500)]

with ApacheKafkaBroker(topics=["test_topic"], apply_nest_asyncio=True) as broker:
    producer = AIOKafkaProducer(bootstrap_servers=broker)
    await producer.start()

    await produce_batch(
        producer,
        topic="test_topic",
        encoder_fn=json_encoder,
        wrapped_val=KafkaEvent(message=msgs, key=b"test"),
    )
    
    await producer.stop()
```

    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): entering...
    [WARNING] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): (<_UnixSelectorEventLoop running=True closed=False debug=False>) is already running!
    [WARNING] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): calling nest_asyncio.apply()
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._testing.apache_kafka_broker: <class 'fastkafka.testing.ApacheKafkaBroker'>.start(): returning 127.0.0.1:9092
    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.start(): exited.
    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.stop(): entering...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 110151...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 110151 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 109791...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 109791 terminated.
    [INFO] fastkafka._testing.apache_kafka_broker: ApacheKafkaBroker.stop(): exited.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/producer_decorator.py#L125"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### producer_decorator

>      producer_decorator (producer_store:Dict[str,Any], func:Union[Callable[...
>                          ,Union[pydantic.main.BaseModel,fastkafka.KafkaEvent[p
>                          ydantic.main.BaseModel],List[pydantic.main.BaseModel]
>                          ,fastkafka.KafkaEvent[List[pydantic.main.BaseModel]]]
>                          ],Callable[...,Awaitable[Union[pydantic.main.BaseMode
>                          l,fastkafka.KafkaEvent[pydantic.main.BaseModel],List[
>                          pydantic.main.BaseModel],fastkafka.KafkaEvent[List[py
>                          dantic.main.BaseModel]]]]]], topic:str,
>                          encoder_fn:Callable[[pydantic.main.BaseModel],bytes])

todo: write documentation

``` python
class MockMsg(BaseModel):
    name: str = "Micky Mouse"
    id: int = 123


mock_msg = MockMsg()

topic = "test_topic"
```

``` python
@asynccontextmanager
async def mock_producer_send_env() -> AsyncGenerator[
    Tuple[Mock, AIOKafkaProducer], None
]:
    try:
        with mock_AIOKafkaProducer_send() as send_mock:
            async with ApacheKafkaBroker(topics=[topic]) as bootstrap_server:
                producer = AIOKafkaProducer(bootstrap_servers=bootstrap_server)
                await producer.start()
                yield send_mock, producer
    finally:
        await producer.stop()
```

``` python
@asynccontextmanager
async def mock_producer_batch_env() -> AsyncGenerator[
    Tuple[Mock, AIOKafkaProducer], None
]:
    try:
        with unittest.mock.patch(
            "__main__.AIOKafkaProducer.send_batch"
        ) as send_batch_mock, unittest.mock.patch(
            "__main__.AIOKafkaProducer.create_batch"
        ) as create_batch_mock:
            batch_mock = Mock()
            create_batch_mock.return_value = batch_mock
            async with ApacheKafkaBroker(topics=[topic]) as bootstrap_server:
                producer = AIOKafkaProducer(bootstrap_servers=bootstrap_server)
                await producer.start()
                yield batch_mock, send_batch_mock, producer
    finally:
        await producer.stop()
```

``` python
async def func_async(mock_msg: MockMsg) -> MockMsg:
    return mock_msg


def func_sync(mock_msg: MockMsg) -> MockMsg:
    return mock_msg


for is_sync, encoder_fn in product([True, False], [json_encoder, avro_encoder]):
    print(f"Testing with: {is_sync=} , {encoder_fn=}")
    async with mock_producer_send_env() as (send_mock, producer):
        test_func = producer_decorator(
            {topic: (None, producer, None)},
            func_sync if is_sync else func_async,
            topic,
            encoder_fn=encoder_fn,
        )

        assert iscoroutinefunction(test_func) != is_sync

        value = test_func(mock_msg) if is_sync else await test_func(mock_msg)

        send_mock.assert_called_once_with(topic, encoder_fn(mock_msg), key=None)

        assert value == mock_msg
```

    Testing with: is_sync=True , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 111291...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 111291 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 110930...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 110930 terminated.
    Testing with: is_sync=True , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 112462...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 112462 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 112098...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 112098 terminated.
    Testing with: is_sync=False , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    stdout=, stderr=, returncode=1
    [INFO] fastkafka._testing.apache_kafka_broker: kafka startup falied, generating a new port and retrying...
    [INFO] fastkafka._testing.apache_kafka_broker: port=43361
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:43361
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 115132...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 115132 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 113754...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 113754 terminated.
    Testing with: is_sync=False , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 117403...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 117403 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 117001...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 117001 terminated.

``` python
test_key = b"key"

async def func_async(mock_msg: MockMsg) -> KafkaEvent[MockMsg]:
    return KafkaEvent(mock_msg, test_key)


def func_sync(mock_msg: MockMsg) -> KafkaEvent[MockMsg]:
    return KafkaEvent(mock_msg, test_key)


for is_sync, encoder_fn in product([True, False], [json_encoder, avro_encoder]):
    print(f"Testing with: {is_sync=} , {encoder_fn=}")
    async with mock_producer_send_env() as (send_mock, producer):
        test_func = producer_decorator(
            {topic: (None, producer, None)},
            func_sync if is_sync else func_async,
            topic,
            encoder_fn=encoder_fn,
        )

        assert iscoroutinefunction(test_func) != is_sync

        value = test_func(mock_msg) if is_sync else await test_func(mock_msg)

        send_mock.assert_called_once_with(topic, encoder_fn(mock_msg), key=test_key)

        assert value == KafkaEvent(mock_msg, test_key)
```

    Testing with: is_sync=True , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 119700...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 119700 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 119302...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 119302 terminated.
    Testing with: is_sync=True , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 121993...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 121993 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 121615...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 121615 terminated.
    Testing with: is_sync=False , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 124294...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 124294 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 123920...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 123920 terminated.
    Testing with: is_sync=False , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    stdout=, stderr=, returncode=1
    [INFO] fastkafka._testing.apache_kafka_broker: kafka startup falied, generating a new port and retrying...
    [INFO] fastkafka._testing.apache_kafka_broker: port=57781
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:57781
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 126963...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 126963 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 126211...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 126211 terminated.

``` python
batch_size = 123


async def func_async(mock_msg: MockMsg) -> List[MockMsg]:
    return [mock_msg] * batch_size


def func_sync(mock_msg: MockMsg) -> List[MockMsg]:
    return [mock_msg] * batch_size


for is_sync, encoder_fn in product([True, False], [json_encoder, avro_encoder]):
    print(f"Testing with: {is_sync=} , {encoder_fn=}")
    async with mock_producer_batch_env() as (
        batch_mock,
        send_batch_mock,
        producer,
    ):
        test_func = producer_decorator(
            {topic: (None, producer, None)},
            func_sync if is_sync else func_async,
            topic,
            encoder_fn=encoder_fn,
        )

        assert iscoroutinefunction(test_func) != is_sync

        value = test_func(mock_msg) if is_sync else await test_func(mock_msg)

        batch_mock.append.assert_has_calls(
            [call(key=None, value=encoder_fn(mock_msg), timestamp=ANY)] * batch_size
        )
        send_batch_mock.assert_called_once_with(batch_mock, topic, partition=0)

        assert value == [mock_msg] * batch_size
```

    Testing with: is_sync=True , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 129249...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 129249 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 128874...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 128874 terminated.
    Testing with: is_sync=True , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 130424...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 130424 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 130064...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 130064 terminated.
    Testing with: is_sync=False , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 132306...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 132306 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 131602...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 131602 terminated.
    Testing with: is_sync=False , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 134900...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 134900 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 134537...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 134537 terminated.

``` python
batch_size = 123
test_key = b"key"


async def func_async(mock_msg: MockMsg) -> KafkaEvent[List[MockMsg]]:
    return KafkaEvent([mock_msg] * batch_size, test_key)


def func_sync(mock_msg: MockMsg) -> KafkaEvent[List[MockMsg]]:
    return KafkaEvent([mock_msg] * batch_size, test_key)


for is_sync, encoder_fn in product([True, False], [json_encoder, avro_encoder]):
    print(f"Testing with: {is_sync=} , {encoder_fn=}")
    async with mock_producer_batch_env() as (batch_mock, send_batch_mock, producer):
        test_func = producer_decorator(
            {topic: (None, producer, None)},
            func_sync if is_sync else func_async,
            topic,
            encoder_fn=encoder_fn,
        )

        assert iscoroutinefunction(test_func) != is_sync

        value = test_func(mock_msg) if is_sync else await test_func(mock_msg)

        batch_mock.append.assert_has_calls(
            [call(key=test_key, value=encoder_fn(mock_msg), timestamp=ANY)] * batch_size
        )

        send_batch_mock.assert_called_once_with(batch_mock, topic, partition=0)

        assert value == KafkaEvent([mock_msg] * batch_size, test_key)
```

    Testing with: is_sync=True , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 136055...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 136055 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 135694...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 135694 terminated.
    Testing with: is_sync=True , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 137195...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 137195 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 136835...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 136835 terminated.
    Testing with: is_sync=False , encoder_fn=<function json_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 139803...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 139803 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 139435...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 139435 terminated.
    Testing with: is_sync=False , encoder_fn=<function avro_encoder>
    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9092
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 140961...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 140961 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 140599...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 140599 terminated.
